--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <meta name="author" content="Mr. Coxall">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <title>My first webpage, with proper style</title>
   </head>
-  <body>
-    Hello world
+    <h1 id="my-header">Style is important</h1>
+    <p>Proper Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <p>
+      <a href="./cities.html">My cities page</a>
+    </p>
   </body>
 </html>
