--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- ICS20-Unit-1-04-HTML-CSS-->
-<html lang="en-ca">
-<html>  
+<html lang="en-ca"> 
   <head>
     <meta charset="utf-8"
     <meta name="description" content="My first webpage, with CSS">
@@ -11,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>My first webpage, with proper style</title>
   </head>
+  <body
     <h1 id="my-header">Style is important</h1>
     <p>Proper Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
