--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>My first webpage, with proper style</title>
   </head>
-  <body
+  <body>
     <h1 id="my-header">Style is important</h1>
     <p>Proper Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
