--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>My first webpage, with proper style</title>
   </head>
   <body>
-    <h1 id="my-header">Style is important</h1>
+    <h1>Style is important</h1>
     <p>Proper Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
-      <a href="./cities.html">My cities page</a>
+      <a href="./index2.html">My index2.html page</a>
     </p>
   </body>
 </html>
