--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>My first webpage, with proper style</title>
   </head>
   <body>
-    <h1>Style is important</h1>
-    <p>Proper Proper HTML style is important</p>
-    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <h1>Computer Science is Awesome!</h1>
+    <p>Computer Science is the study of computers and computational systems.</p>
+    <img src="./images/myhc_89683.jpg" alt="computer science">
     <p>
       <a href="./index2.html">My index2.html page</a>
     </p>
