--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kenny Le">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>My first webpage, with proper style</title>
+    <title>My first webpage, with CSS</title>
   </head>
   <body>
     <h1>Computer Science is Awesome!</h1>
