changed index2.html and style2.css

--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,42 @@
 <!DOCTYPE html>
+<!-- ICS20-Unit-1-04-HTML-CSS-->
+<html lang="en-ca">
+  <head>
+    <meta charset="utf-8"
+    <meta name="description" content="My second webpage, with CSS">
+    <meta name="keywords" content="mths, ics2o">
+    <meta name="author" content="Kenny Le">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style2.css">
+    <title>My first webpage, with CSS</title>
+  </head>
+  <body>
+    <h1>Computer Science is Awesome!</h1>
+    <p>Here are 5 reasons to study computer science:</p>
+    <ol>
+      <li>You Can Do It Yourself</li>
+      <li>You Can Develop Your Skills To Earn As A Freelancer</li>
+      <li>You Can Become A Problem Solver</li>
+      <li>You Can Gain Serious Confidence From Your Work</li>
+      <li>It Is A Growing Field</li>
+    </ol>
+    <table>
+      <tr>
+        <th>Job Title</th>
+        <th>Salary</th>
+      </tr>
+      <tr>
+        <td>Computer Scientist</td>
+        <td>$75,313 /yr</td>
+      </tr>
+      <tr>
+        <td>Computer Scientist Assistant</td>
+        <td>$73,506 /yr</td>
+      </tr>
+      <tr>
+        <td>ComputerComputer Scientist I</td>
+        <td>$73,506 /yr</td>
+      </tr>
+    </table>
+  </body>
+</html>
